node-mongo-kube/app-express-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-mongo-express
spec:
  selector:
    matchLabels:
      app: app-mongo-express
  template:
    metadata:
      labels:
        app: app-mongo-express
    spec:
      containers:
      - name: app-mongo-express
        image: mongo-express
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: app-express-service
spec:
  selector:
    app: app-mongo-express
  # type: LoadBalancer
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 8081
