node-mongo-kube/app-mongodb-deployment.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: app-mongodb-standalone
spec:
  serviceName: app-mongodb
  replicas: 1
  selector:
    matchLabels:
      app: app-mongodb
  template:
    metadata:
      labels:
        app: app-mongodb
        selector: mongodb-standalone
    spec:
      containers:
      - name: app-mongodb
        image: mongo
        ports:
        - containerPort: 27017
---
apiVersion: v1
kind: Service
metadata:
  name: app-mongodb-service
spec:
  selector:
    app: app-mongodb
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017
