node-mongo-kube/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  labels:
      name: app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
    - hosts:
      - test.example.com
      secretName: app-tls
  rules:
  - host: test.example.com
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: app-express-service
              port:
                number: 3000
